Updated Minecraft Backup script for typhlosion